--- a/install.html
+++ b/install.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<!-- $Id: install.html,v 1.12 2006/10/13 19:25:37 jact Exp $ -->
+<!-- $Id: install.html,v 1.13 2007/12/23 13:26:08 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -13,13 +13,17 @@
 
 <meta name="author" content="Jose Antonio Chavarría" />
 
-<meta name="copyright" content="2002-2006 Jose Antonio Chavarría" />
+<meta name="copyright" content="2002-2008 Jose Antonio Chavarría" />
 
 <meta name="keywords" content="OpenClinic, open source, gpl, healthcare, php, mysql, coresis" />
 
 <meta name="description" content="OpenClinic is an easy to use, open source, medical records system written in PHP" />
 
-<link rel="stylesheet" type="text/css" href="./css/style.css" media="screen" title="OpenClinic" />
+<link rel="stylesheet" type="text/css" href="./css/openclinic.css" media="screen" title="OpenClinic" />
+
+<!--[if lt IE 7]>
+<link rel="stylesheet" type="text/css" href="./css/ie6_fix.css" title="IE 6 Fix" />
+<![endif]-->
 
 <link rel="stylesheet" type="text/css" href="./css/print.css" media="print" />
 
@@ -28,56 +32,72 @@
 <link rel="bookmark icon" type="image/png" href="./img/miniopc.png" />
 </head>
 <body id="top">
-<div id="content">
-  <h1>Install Instructions</h1>
+<div id="wrap">
+  <div id="header">
+    <p id="logo">
+      <a accesskey="1" href="../index.php">
+        <img src="./img/openclinic-1.png" alt="OpenClinic" title="OpenClinic" height="58" width="291" />
+      </a>
+    </p>
 
-  <h2 id="update"><a href="#top" title="To top of the page">Updating an Older Version of OpenClinic</a></h2>
-
-  <p>
-    If you have already created the OpenClinic database when installing an older version, follow these steps:
-  </p>
-
-  <ol>
-    <li>
-      Go to the <a href="./install/index.php">install <acronym title="PHP: Hypertext Preprocessor">PHP</acronym> script</a>.
-    </li>
-
-    <li>
-      In the section <strong class="note">Install a SQL File</strong>, choose the right file in <code>install/upgrades/</code> directory.
-    </li>
-
-    <li>
-      If does not exist a correct upgrade file, <a href="#step7">skip to step 7 of next section</a>.
-    </li>
-  </ol>
+    <div id="shortcuts">
+      <ul>
+        <li><a href="./index.php">Start OpenClinic</a></li>
+      </ul>
+    </div><!-- #shortcuts -->
+  </div><!-- #header -->
 
   <hr />
 
-  <h2 id="install"><a href="#top" title="To top of the page">Installing OpenClinic for the First Time</a></h2>
+  <div id="main">
+    <div id="content">
+      <h1>Install Instructions</h1>
 
-  <ol>
-    <li>
-      Install a web server such as <a href="http://httpd.apache.org">Apache</a> that can execute cgi applications. If you install Apache, get familiar with starting and stopping your Apache Web Server. If you are running Windows 95 or Windows 98 there will be <q><strong>Start Apache</strong></q> and <q><strong>Stop Apache</strong></q> icons that will help you start and stop your web server. You may want to consider adding the <q><strong>Start Apache</strong></q> icon to your startup folder. If you are running NT you can add Apache as a service which will be running, even if you are logged off. If you are running Linux your Apache server should be packaged with your Linux installation and will start when you start Linux.
-    </li>
-
-    <li>
-      <p>
-        Install the MySQL database from <a href="http://www.mysql.com">MySQL web site</a>. Get familiar with starting and stopping your MySQL Server. See <a href="http://www.mysql.com/doc/W/i/Win95_start.html">Starting MySQL on Windows 95 or Windows 98</a> for more information. <strong class="note">Version recommended: &gt;= 3.23.36.</strong>
-      </p>
+      <h2 id="update"><a href="#top" title="To top of the page">Updating an Older Version of OpenClinic</a></h2>
 
       <p>
-        If you are running NT, setup MySQL as a service so it starts whenever the machine powers up. See <a href="http://www.mysql.com/doc/N/T/NT_start.html">Starting MySQL on Windows NT or Windows 2000</a> for more information on starting MySQL as a service.
+        If you have already created the OpenClinic database when installing an older version, follow these steps:
       </p>
 
-      <p>
-        If you are running Linux, MySQL should be packaged with your Linux installation and will start when you start Linux.
-      </p>
-    </li>
+      <ol>
+        <li>
+          Go to the <a href="./install/index.php">install <acronym title="PHP: Hypertext Preprocessor">PHP</acronym> script</a>.
+        </li>
 
-    <li>
-      Get familiar with logging into MySQL with your admin account within a DOS prompt window. You can use the following command sequence as a test.
+        <li>
+          In the section <strong class="note">Install a SQL File</strong>, choose the right file in <code>install/upgrades/</code> directory.
+        </li>
 
-<pre>
+        <li>
+          If does not exist a correct upgrade file, <a href="#step7">skip to step 7 of next section</a>.
+        </li>
+      </ol>
+
+      <h2 id="install"><a href="#top" title="To top of the page">Installing OpenClinic for the First Time</a></h2>
+
+      <ol>
+        <li>
+          Install a web server such as <a href="http://httpd.apache.org">Apache</a> that can execute cgi applications. If you install Apache, get familiar with starting and stopping your Apache Web Server. If you are running Windows 95 or Windows 98 there will be <q><strong>Start Apache</strong></q> and <q><strong>Stop Apache</strong></q> icons that will help you start and stop your web server. You may want to consider adding the <q><strong>Start Apache</strong></q> icon to your startup folder. If you are running NT you can add Apache as a service which will be running, even if you are logged off. If you are running Linux your Apache server should be packaged with your Linux installation and will start when you start Linux.
+        </li>
+
+        <li>
+          <p>
+            Install the MySQL database from <a href="http://www.mysql.com">MySQL web site</a>. Get familiar with starting and stopping your MySQL Server. See <a href="http://www.mysql.com/doc/W/i/Win95_start.html">Starting MySQL on Windows 95 or Windows 98</a> for more information. <strong class="note">Version recommended: &gt;= 3.23.36.</strong>
+          </p>
+
+          <p>
+            If you are running NT, setup MySQL as a service so it starts whenever the machine powers up. See <a href="http://www.mysql.com/doc/N/T/NT_start.html">Starting MySQL on Windows NT or Windows 2000</a> for more information on starting MySQL as a service.
+          </p>
+
+          <p>
+            If you are running Linux, MySQL should be packaged with your Linux installation and will start when you start Linux.
+          </p>
+        </li>
+
+        <li>
+          Get familiar with logging into MySQL with your admin account within a DOS prompt window. You can use the following command sequence as a test.
+
+<pre class="sqlcode"><code>
 C:\&gt;<kbd>c:\mysql\bin\mysql -uadmin -p mysql</kbd>
 Enter password: <kbd>*********</kbd>
 Welcome to the MySQL monitor.  Commands end with ; or \g.
@@ -98,20 +118,21 @@ mysql&gt; <kbd>exit</kbd>
 <samp>Bye
 </samp>
 C:\&gt;
-</pre>
-    </li>
+</code></pre>
+        </li>
 
-    <li id="step4">
-      Create an openclinic database. To do this, log into MySQL with your admin account and run the following SQL command.
+        <li id="step4">
+          Create an openclinic database. To do this, log into MySQL with your admin account and run the following SQL command.
 
-<pre>
+<pre><code>
 mysql&gt; <kbd>create database openclinic;</kbd>
-</pre>
+</code></pre>
 
-      <p>
-        To check to make sure the openclinic database was created properly run the following command.
-      </p>
-<pre>
+          <p>
+            To check to make sure the openclinic database was created properly run the following command.
+          </p>
+
+<pre><code>
 mysql&gt; <kbd>show databases;</kbd>
 <samp>+--------------+
 | Database     |
@@ -121,90 +142,94 @@ mysql&gt; <kbd>show databases;</kbd>
 | test         |
 +--------------+
 3 rows in set (0.00 sec)</samp>
-</pre>
-    </li>
+</code></pre>
+        </li>
 
-    <li id="step5">
-      Create an openclinic database user. To do this login to MySQL under the admin userid and run the following SQL command, substituting <var>openclinic_user</var> and <var>openclinic_password</var> with the userid and password of your choice.
+        <li id="step5">
+          Create an openclinic database user. To do this login to MySQL under the admin userid and run the following SQL command, substituting <var>openclinic_user</var> and <var>openclinic_password</var> with the userid and password of your choice.
 
-<pre>
+<pre><code>
 mysql&gt; <kbd>grant all privileges on openclinic.* to <var>openclinic_user</var>@localhost</kbd>
     -&gt; <kbd>identified by '<var>openclinic_password</var>' with grant option;</kbd>
-</pre>
-    </li>
+</code></pre>
+        </li>
 
-    <li>
-      Verify your openclinic database and user by logging into the new MySQL database under the new user.
+        <li>
+          Verify your openclinic database and user by logging into the new MySQL database under the new user.
 
-<pre>
+<pre><code>
 C:\&gt;<kbd>C:\mysql\bin\mysql -u <var>openclinic_user</var> -p<var>openclinic_password</var> openclinic</kbd>
-</pre>
-    </li>
+</code></pre>
+        </li>
 
-    <li id="step7">
-      Copy the openclinic directory and all of its contents into your web server's htdocs root or any subdirectory within the htdocs root.
-    </li>
+        <li id="step7">
+          Copy the openclinic directory and all of its contents into your web server's htdocs root or any subdirectory within the htdocs root.
+        </li>
 
-    <li id="step8">
-      Edit the <code class="note">database_constants.php</code> file (located in the <code>openclinic/config/</code> directory) with the text editor of your choice. Change the username and password to match the new MySQL user and password that you created in the previous steps.
-    </li>
+        <li id="step8">
+          Edit the <code class="note">database_constants.php</code> file (located in the <code>openclinic/config/</code> directory) with the text editor of your choice. Change the username and password to match the new MySQL user and password that you created in the previous steps.
+        </li>
 
-    <li>
-      Create the openclinic database tables. To do this run the <a href="./install/index.php">install <acronym title="PHP: Hypertext Preprocessor">PHP</acronym> script</a>.
-    </li>
+        <li>
+          Create the openclinic database tables. To do this run the <a href="./install/index.php">install <acronym title="PHP: Hypertext Preprocessor">PHP</acronym> script</a>.
+        </li>
 
-    <li>
-      Make <code>css</code> and <code>test</code> directories writtable for Apache user to allow upload files.
-    </li>
+        <li>
+          Make <code>css</code> and <code>test</code> directories writtable for Apache user to allow upload files.
+        </li>
 
-    <li>
-      Access your new <a href="./index.php">clinic system</a>. Enter <kbd class="note">admin</kbd> for both, the login and password whenever you are prompted to sign on. You can change the admin password from the <strong class="note">Admin &raquo; Users</strong>.
-    </li>
-  </ol>
-</div><!-- End #content -->
+        <li>
+          Access your new <a href="./index.php">clinic system</a>. Enter <code><kbd>admin</kbd></code> for both, the login and password whenever you are prompted to sign on. You can change the admin password from the <strong class="note">Admin &raquo; Users</strong>.
+        </li>
+      </ol>
+    </div><!-- #content -->
+  </div><!-- #main -->
 
-<div id="menu">
-  <p>
-    <a href="http://openclinic.sourceforge.net" id="logo" title="OpenClinic web site">OpenClinic web site</a>
-  </p>
+  <hr />
 
-  <h2>Table of contents</h2>
+  <div id="navigation">
+    <h2>Table of contents</h2>
 
-  <ul>
-    <li><a href="#update">Updating an Older Version of OpenClinic</a></li>
+    <ul>
+      <li><a href="#update">Updating an Older Version of OpenClinic</a></li>
 
-    <li><a href="#install">Installing OpenClinic for the First Time</a></li>
-  </ul>
-</div><!-- End #menu -->
+      <li><a href="#install">Installing OpenClinic for the First Time</a></li>
+    </ul>
 
-<div id="extra">
-  <h2>Related links</h2>
+    <p id="hosting">
+      <a href="http://sourceforge.net" title="Project hosted in SourceForge.net">Project hosted in SF.net</a>
+    </p>
+  </div><!-- #navigation -->
 
-  <ul>
-    <li><a href="./index.php"><strong>Start OpenClinic</strong></a></li>
+  <hr />
 
-    <li><a href="./index.html">Readme</a></li>
+  <div id="footer">
+    <ul id="doc_links">
+      <li><a href="./index.html">Readme</a></li>
 
-    <li><a href="./changelog.html">Changelog</a></li>
+      <li><a href="./changelog.html">Changelog</a></li>
 
-    <li><a href="./coding_guidelines.html">Coding Guidelines</a></li>
+      <li><a href="./coding_guidelines.html">Coding Guidelines</a></li>
 
-    <li><a href="./demo_version.html">Demo Version Features</a></li>
-  </ul>
+      <li><a href="./demo_version.html">Demo Version Features</a></li>
+    </ul>
 
-  <p>
-    <a href="http://sourceforge.net" id="hosting" title="Project hosted in SourceForge.net">Project hosted in SF.net</a>
-  </p>
-</div><!-- End #extra -->
+    <div id="app_info">
+      <p>Powered by OpenClinic</p>
 
-<div id="footer">
-  <p>Powered by OpenClinic</p>
+      <p>
+        Copyright &copy; 2002-2008 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a>
+      </p>
 
-  <p>Copyright &copy; 2002-2006 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a><br />under the <a href="./LICENSE">GNU General Public License</a></p>
+      <p>
+        Under the <a href="./LICENSE" rel="license">GNU General Public License</a>
+      </p>
 
-  <p>
-    <a href="http://validator.w3.org/check/referer" id="xhtml11" title="Valid XHTML 1.1">Valid XHTML 1.1</a>
-  </p>
-</div><!-- End #footer -->
+      <p>
+        <a href="http://validator.w3.org/check/referer" id="xhtml11" title="Valid XHTML 1.1">Valid XHTML 1.1</a>
+      </p>
+    </div><!-- #app_info -->
+  </div><!-- #footer -->
+</div><!-- #wrap -->
 </body>
 </html>
