--- a/demo_version.html
+++ b/demo_version.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<!-- $Id: demo_version.html,v 1.13 2007/12/23 13:26:08 jact Exp $ -->
+<!-- $Id: demo_version.html,v 1.14 2013/01/12 22:39:19 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -13,7 +13,7 @@
 
 <meta name="author" content="Jose Antonio Chavarría" />
 
-<meta name="copyright" content="2002-2008 Jose Antonio Chavarría" />
+<meta name="copyright" content="2002-2013 Jose Antonio Chavarría" />
 
 <meta name="keywords" content="OpenClinic, open source, gpl, healthcare, php, mysql, coresis" />
 
@@ -58,7 +58,7 @@
       <h2 id="enable"><a href="#top" title="To top of the page">Enable/Disable Demo</a></h2>
 
       <p>
-        To enable/disable OpenClinic demo behavior there must be set as <code>true</code> or <code>false</code> the constant <code>OPEN_DEMO</code> in file <code class="note">shared/read_settings.php</code>.
+        To enable/disable OpenClinic demo behavior there must be set as <code>true</code> or <code>false</code> the constant <code>OPEN_DEMO</code> in file <code class="note">config/global_constants.php</code>.
       </p>
 
 <pre class="programlisting"><code>
@@ -162,7 +162,7 @@ define("OPEN_DEMO", <var>true</var>); // demo version
       <p>Powered by OpenClinic</p>
 
       <p>
-        Copyright &copy; 2002-2008 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a>
+        Copyright &copy; 2002-2013 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a>
       </p>
 
       <p>
