--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
-<!-- $Id: index.html,v 1.16 2007/12/23 13:26:08 jact Exp $ -->
+<!-- $Id: index.html,v 1.17 2013/01/12 22:40:30 jact Exp $ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" dir="ltr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -13,7 +13,7 @@
 
 <meta name="author" content="Jose Antonio Chavarría" />
 
-<meta name="copyright" content="2002-2008 Jose Antonio Chavarría" />
+<meta name="copyright" content="2002-2013 Jose Antonio Chavarría" />
 
 <meta name="keywords" content="OpenClinic, open source, gpl, healthcare, php, mysql, coresis" />
 
@@ -31,6 +31,7 @@
 
 <link rel="bookmark icon" type="image/png" href="./img/miniopc.png" />
 </head>
+<!-- @todo hacer como tabs los enlaces de pie de página para mantener la estructura coherente con la aplicación -->
 <body id="top">
 <div id="wrap">
   <div id="header">
@@ -113,11 +114,11 @@
 
       <ul>
         <li>
-          PHP4 &gt;= 4.3.0 (due to use of mysql_real_escape_string function) <strong class="note">compiled with MySQL support</strong> (tested with versions 4.3.*, 4.4.*);
+          PHP5 &gt;= 5.1 (incompatible with PHP4) <strong class="note">compiled with MySQL support</strong> (tested with versions 5.2.17);
         </li>
 
         <li>
-          MySQL (tested with versions 3.23.36, 3.23.49, 3.23.51, 3.23.52, 3.23.54, 3.23.55, 4.0.16 and 4.0.18);
+          MySQL (tested with versions 5.1);
         </li>
 
         <li>
@@ -125,7 +126,7 @@
         </li>
 
         <li>
-          and, of course, a web browser (with JavaScript and good CSS2 support). Recommended <a href="http://www.mozilla.org/">Mozilla</a> or <a href="http://www.mozilla.org/products/firefox/">Firefox</a>. Advice: Microsoft Interner Explorer could not show application pages accurate.
+          and, of course, a web browser (with JavaScript and good CSS2 support). Recommended <a href="http://www.mozilla.org/">Mozilla Firefox</a>.
         </li>
       </ul>
 
@@ -270,7 +271,7 @@
       <p>Powered by OpenClinic</p>
 
       <p>
-        Copyright &copy; 2002-2008 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a>
+        Copyright &copy; 2002-2013 <a href="mailto:CUT-THIS.openclinic&#64;gmail.com?subject=OpenClinic" accesskey="9">Jose Antonio Chavarría</a>
       </p>
 
       <p>
